ui fix: align items to center

--- a/src/pages/UserEvents.module.scss
+++ b/src/pages/UserEvents.module.scss
@@ -8,6 +8,7 @@
 
 .empty {
   align-items: center;
+  text-align: center;
   gap: 24px;
   margin: 24px;
 }
