--- a/src/pages/UserFriends.module.scss
+++ b/src/pages/UserFriends.module.scss
@@ -13,6 +13,7 @@
   align-items: center;
   margin: 24px;
   font-size: 18px;
+  text-align: center;
 }
 
 .link {
